[automatic-ispn-deployment] add and fix testcontainers ISPN deployment